Avoid passing uninitialized InductiveProperty.Rule objects to its dependencies.